implementations/rust/ockam/ockam/tests/node_test/fail_if_item_is_not_a_function.stderr
error: expected `fn`
 --> $DIR/fail_if_item_is_not_a_function.rs:5:1
  |
5 | struct A {}
  | ^^^^^^
