implementations/rust/ockam/ockam/tests/node_test/fail_if_item_is_not_a_function.rs
// This test checks that #[ockam_test_macros::node_test] causes a compile time error
// if the item it is defined on is not a function.

#[ockam_test_macros::node_test]
struct A {}
